Streamline repo: add .gitignore, drop generated data and caches, add canonical data/top_200.txt and --input-list support; update usage and notebook to prefer fixed Top 200

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -48,26 +48,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from pathlib import Path\n",
-        "import sys\n",
-        "import os\n",
-        "\n",
-        "# src altını import yoluna ekle\n",
-        "sys.path.append(str(Path('src').resolve()))\n",
-        "\n",
-        "import networkx as nx\n",
-        "from analyze_npm_network import (\n",
-        "    fetch_top_packages,\n",
-        "    build_dependency_graph,\n",
-        "    compute_metrics,\n",
-        "    save_edges,\n",
-        "    save_metrics,\n",
-        "    save_report,\n",
-        ")\n",
-        "\n",
-        "TOP_N = 200  # gerektiğinde değiştirin\n",
-        "OUTDIR = Path('data_nb_200')\n",
-        "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
+        "from pathlib import Path",
+        "import sys",
+        "import os",
+        "",
+        "# src altını import yoluna ekle",
+        "sys.path.append(str(Path('src').resolve()))",
+        "",
+        "import networkx as nx",
+        "from analyze_npm_network import (",
+        "    fetch_top_packages,",
+        "    build_dependency_graph,",
+        "    compute_metrics,",
+        "    save_edges,",
+        "    save_metrics,",
+        "    save_report,",
+        ")",
+        "",
+        "# Tercihen sabit Top 200 listesi",
+        "INPUT_LIST = Path('data/top_200.txt')",
+        "USE_INPUT_LIST = INPUT_LIST.exists()",
+        "TOP_N = 200  # fetching fallback",
+        "OUTDIR = Path('data_nb_200')",
+        "OUTDIR.mkdir(parents=True, exist_ok=True)",
         "OUTDIR"
       ]
     },
@@ -85,7 +88,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "top_packages = fetch_top_packages(TOP_N)\n",
+        "if USE_INPUT_LIST:",
+        "    from analyze_npm_network import read_list",
+        "    top_packages = read_list(INPUT_LIST)",
+        "    print(f'Loaded {len(top_packages)} from {INPUT_LIST}')",
+        "else:",
+        "    top_packages = fetch_top_packages(TOP_N)",
+        "    print(f'Fetched {len(top_packages)} from API(s)')",
         "len(top_packages), top_packages[:20]"
       ]
     },
@@ -239,4 +248,3 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
-
