Cleanup: remove extra data_* folders; set analysis.ipynb OUTDIR to 'data' for a single data directory

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -69,7 +69,7 @@
         "INPUT_LIST = Path('data/top_200.txt')",
         "USE_INPUT_LIST = INPUT_LIST.exists()",
         "TOP_N = 200  # fetching fallback",
-        "OUTDIR = Path('data_nb_200')",
+        "OUTDIR = Path('data')",
         "OUTDIR.mkdir(parents=True, exist_ok=True)",
         "OUTDIR"
       ]
