--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -45,32 +45,33 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "81158fac",
       "metadata": {},
       "outputs": [],
       "source": [
-        "from pathlib import Path",
-        "import sys",
-        "import os",
-        "",
-        "# src altını import yoluna ekle",
-        "sys.path.append(str(Path('src').resolve()))",
-        "",
-        "import networkx as nx",
-        "from analyze_npm_network import (",
-        "    fetch_top_packages,",
-        "    build_dependency_graph,",
-        "    compute_metrics,",
-        "    save_edges,",
-        "    save_metrics,",
-        "    save_report,",
-        ")",
-        "",
-        "# Tercihen sabit Top 200 listesi",
-        "INPUT_LIST = Path('data/top_200.txt')",
-        "USE_INPUT_LIST = INPUT_LIST.exists()",
-        "TOP_N = 200  # fetching fallback",
-        "OUTDIR = Path('data')",
-        "OUTDIR.mkdir(parents=True, exist_ok=True)",
+        "from pathlib import Path\n",
+        "import sys\n",
+        "import os\n",
+        "\n",
+        "# src altını import yoluna ekle\n",
+        "sys.path.append(str(Path('src').resolve()))\n",
+        "\n",
+        "import networkx as nx\n",
+        "from analyze_npm_network import (\n",
+        "    fetch_top_packages,\n",
+        "    build_dependency_graph,\n",
+        "    compute_metrics,\n",
+        "    save_edges,\n",
+        "    save_metrics,\n",
+        "    save_report,\n",
+        ")\n",
+        "\n",
+        "# Tercihen sabit Top 200 listesi\n",
+        "INPUT_LIST = Path('data/top_200.txt')\n",
+        "USE_INPUT_LIST = INPUT_LIST.exists()\n",
+        "TOP_N = 200  # fetching fallback\n",
+        "OUTDIR = Path('results')\n",
+        "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR"
       ]
     },
@@ -88,13 +89,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "if USE_INPUT_LIST:",
-        "    from analyze_npm_network import read_list",
-        "    top_packages = read_list(INPUT_LIST)",
-        "    print(f'Loaded {len(top_packages)} from {INPUT_LIST}')",
-        "else:",
-        "    top_packages = fetch_top_packages(TOP_N)",
-        "    print(f'Fetched {len(top_packages)} from API(s)')",
+        "if USE_INPUT_LIST:\n",
+        "    from analyze_npm_network import read_list\n",
+        "    top_packages = read_list(INPUT_LIST)\n",
+        "    print(f'Loaded {len(top_packages)} from {INPUT_LIST}')\n",
+        "else:\n",
+        "    top_packages = fetch_top_packages(TOP_N)\n",
+        "    print(f'Fetched {len(top_packages)} from API(s)')\n",
         "len(top_packages), top_packages[:20]"
       ]
     },
@@ -242,7 +243,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
