Notebook: add full and Top-200-only network drawings; save figures under results/. README: document visualization outputs

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -234,6 +234,83 @@
         "except ModuleNotFoundError:\n",
         "    print('matplotlib bulunamadı; görselleştirme atlandı.')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 10) Top 200 Ağ Çizimi (Tüm Düğümler Dahil)",
+        "Tüm grafiği (Top 200 + bağımlılıkları) çizelim. Top 200 düğümlerini farklı renkte gösteriyoruz ve düğüm boyutlarını in-degree ile ölçekliyoruz."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import math",
+        "import matplotlib.pyplot as plt",
+        "",
+        "# Yerleşim ve görselleştirme parametreleri",
+        "N = G.number_of_nodes()",
+        "pos = nx.spring_layout(G, k=1/math.sqrt(max(N,1)), seed=42)",
+        "",
+        "# Düğüm boyutları: in-degree tabanlı",
+        "max_in = max(in_deg.values()) if in_deg else 1",
+        "node_sizes = [ 100 + (400 * (in_deg.get(n,0) / max_in if max_in else 0)) for n in G.nodes() ]",
+        "",
+        "# Renk: Top 200 turuncu, diğerleri mavi",
+        "node_colors = [ \"tab:orange\" if n in top_set else \"tab:blue\" for n in G.nodes() ]",
+        "",
+        "plt.figure(figsize=(12, 9), dpi=150)",
+        "nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)",
+        "nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors=\"#444444\")",
+        "plt.title(\"NPM Top 200 Bağımlılık Ağı (Tümü)\")",
+        "plt.axis(\"off\")",
+        "out_png = OUTDIR / \"network_full_top200.png\"",
+        "out_svg = OUTDIR / \"network_full_top200.svg\"",
+        "plt.tight_layout()",
+        "plt.savefig(out_png)",
+        "plt.savefig(out_svg)",
+        "out_png, out_svg"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 11) Top 200 Kohortu Ağ Çizimi (Sadece Top 200)",
+        "Top 200 düğümlerin oluşturduğu indüklenmiş alt-ağı çizelim."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "H = G.subgraph(top_set).copy()",
+        "HN = H.number_of_nodes() or 1",
+        "posH = nx.spring_layout(H, k=1/math.sqrt(HN), seed=42)",
+        "max_in_H = max((in_deg.get(n,0) for n in H.nodes()), default=1)",
+        "node_sizes_H = [ 120 + (480 * (in_deg.get(n,0) / max_in_H if max_in_H else 0)) for n in H.nodes() ]",
+        "node_colors_H = [ \"tab:orange\" for _ in H.nodes() ]",
+        "plt.figure(figsize=(10, 8), dpi=150)",
+        "nx.draw_networkx_edges(H, posH, arrows=False, width=0.6, alpha=0.35)",
+        "nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors=\"#444444\")",
+        "# İsteğe bağlı: az sayıda düğüm varsa etiketleri göster",
+        "if H.number_of_nodes() <= 60:",
+        "    nx.draw_networkx_labels(H, posH, font_size=6)",
+        "plt.title(\"NPM Top 200 Bağımlılık Ağı (Sadece Top 200)\")",
+        "plt.axis(\"off\")",
+        "out_png2 = OUTDIR / \"network_top200_only.png\"",
+        "out_svg2 = OUTDIR / \"network_top200_only.svg\"",
+        "plt.tight_layout()",
+        "plt.savefig(out_png2)",
+        "plt.savefig(out_svg2)",
+        "out_png2, out_svg2"
+      ]
     }
   ],
   "metadata": {
