Improve analysis notebook: remove install cell, add detailed explanations, validation, and full/top-only drawings; ensure results saved under results/

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,48 +4,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# NPM Complex Network Analysis (Top-N)\n",
+        "# NPM Complex Network Analysis (Top 200)\n",
         "\n",
-        "Bu notebook, NPM ekosistemindeki paketleri yönlü bir ağ (Dependent → Dependency) olarak modelleyip, merkeziyet metrikleri ile yapısal riski analiz eder.\n",
+        "This notebook models the popular Top 200 NPM packages as a directed network (Dependent -> Dependency) and analyzes structural risk using in-degree and betweenness centrality. We skip installation cells and assume required packages are available in the environment.\n",
         "\n",
-        "Hedefler:\n",
-        "- Top-N (ör. 200) paket listesini indirmek (downloads’a göre)\n",
-        "- `Dependent → Dependency` yönünde bir `DiGraph` kurmak\n",
-        "- In-degree ve betweenness centrality hesaplamak\n",
-        "- Sonuçları tablo ve dosya olarak kaydetmek\n",
+        "Contents:\n",
+        "- Data: `data/top_200.txt` (auto-used if present)\n",
+        "- Graph: NetworkX DiGraph, edges as Dependent -> Dependency\n",
+        "- Metrics: In-degree, Betweenness\n",
+        "- Outputs: saved under `results/`\n",
+        "- Visualization: full graph and Top-200-only induced subgraph\n",
         "\n",
-        "Not: Büyük N (örn. 20k) için bağımlılık çekme ve betweenness hesaplaması maliyetlidir; bu notebook N=200 civarında etkileşimli çalışmaya uygundur."
+        "Note: For large N (e.g., 20k), fetching dependencies and betweenness can be expensive; this notebook is tuned for the Top 200 cohort."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1) Kurulum\n",
-        "Gerekli bağımlılıkları yükleyelim. Eğer sanal ortam kullanıyorsanız, önce etkinleştirin."
+        "## 1) Imports and Parameters\n",
+        "We reuse helpers from `src/analyze_npm_network.py`. Default `OUTDIR` is `results/`."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%pip install -q -r requirements.txt"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 2) İçe Aktarım ve Parametreler\n",
-        "Var olan yardımcı fonksiyonları `src/analyze_npm_network.py` içinden kullanacağız."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "81158fac",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -53,7 +36,7 @@
         "import sys\n",
         "import os\n",
         "\n",
-        "# src altını import yoluna ekle\n",
+        "# add src to import path\n",
         "sys.path.append(str(Path('src').resolve()))\n",
         "\n",
         "import networkx as nx\n",
@@ -64,12 +47,13 @@
         "    save_edges,\n",
         "    save_metrics,\n",
         "    save_report,\n",
+        "    read_list,\n",
         ")\n",
         "\n",
-        "# Tercihen sabit Top 200 listesi\n",
+        "# Prefer fixed Top 200 list\n",
         "INPUT_LIST = Path('data/top_200.txt')\n",
         "USE_INPUT_LIST = INPUT_LIST.exists()\n",
-        "TOP_N = 200  # fetching fallback\n",
+        "TOP_N = 200  # fallback to fetching if needed\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR"
@@ -79,8 +63,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3) Top-N Paketleri Getir\n",
-        "Önce indirme sayısına göre sıralı Top-N listeyi çekiyoruz. Ecosystems API öncelikli, gerekirse yedek kaynaklar kullanılır."
+        "## 2) Load Top 200 Packages\n",
+        "Use `data/top_200.txt` if available; otherwise fetch Top-N from APIs."
       ]
     },
     {
@@ -90,7 +74,6 @@
       "outputs": [],
       "source": [
         "if USE_INPUT_LIST:\n",
-        "    from analyze_npm_network import read_list\n",
         "    top_packages = read_list(INPUT_LIST)\n",
         "    print(f'Loaded {len(top_packages)} from {INPUT_LIST}')\n",
         "else:\n",
@@ -103,8 +86,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4) Ağın Kurulması (Directed)\n",
-        "Düğümler: paketler; Kenarlar: `Dependent → Dependency`."
+        "## 3) Build Directed Graph\n",
+        "Nodes are packages; edges are Dependent -> Dependency. Only `dependencies` are included by default."
       ]
     },
     {
@@ -121,8 +104,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5) Merkeziyet Metrikleri\n",
-        "In-degree (pakete gelen kenar sayısı) ve betweenness (en kısa yollardaki aracı rol) hesaplanır."
+        "## 4) Centrality Metrics\n",
+        "- In-Degree: incoming edges to a node -> potential blast radius\n",
+        "- Betweenness: brokerage on shortest paths -> single-point-of-failure risk"
       ]
     },
     {
@@ -132,9 +116,7 @@
       "outputs": [],
       "source": [
         "in_deg, btw = compute_metrics(G)\n",
-        "# Özet\n",
-        "nodes = G.number_of_nodes()\n",
-        "edges = G.number_of_edges()\n",
+        "nodes = G.number_of_nodes(); edges = G.number_of_edges()\n",
         "nodes, edges"
       ]
     },
@@ -142,8 +124,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6) İlk 15 – In-Degree ve Betweenness\n",
-        "Top listeleri hızlıca görelim."
+        "## 5) Top 15 (All vs Cohort)\n",
+        "Quick look at leaders by in-degree and betweenness across all nodes and within the Top 200 cohort."
       ]
     },
     {
@@ -154,10 +136,8 @@
       "source": [
         "top_in_all = sorted(in_deg.items(), key=lambda kv: kv[1], reverse=True)[:15]\n",
         "top_btw_all = sorted(btw.items(), key=lambda kv: kv[1], reverse=True)[:15]\n",
-        "\n",
         "top_in_top = sorted(((n, in_deg.get(n, 0)) for n in top_set), key=lambda kv: kv[1], reverse=True)[:15]\n",
         "top_btw_top = sorted(((n, btw.get(n, 0.0)) for n in top_set), key=lambda kv: kv[1], reverse=True)[:15]\n",
-        "\n",
         "top_in_all, top_btw_all, top_in_top, top_btw_top"
       ]
     },
@@ -165,8 +145,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7) Sonuçları Kaydet\n",
-        "Kenarlıklar, metrikler ve kısa raporu dosyaya yazalım."
+        "## 6) Save Artifacts\n",
+        "Edges, metrics, and a short report are written under `results/`."
       ]
     },
     {
@@ -186,8 +166,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8) (Opsiyonel) Küçük Görselleştirme\n",
-        "Büyük grafikleri çizmek zor olabilir; küçük bir alt-ağ (ör. en yüksek in-degree düğümünün ego grafiği) çizilebilir."
+        "## 7) Quick Validation\n",
+        "Compare registry dependencies with graph edges for a random few packages. Minor differences can arise due to version drift."
       ]
     },
     {
@@ -196,7 +176,37 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%pip install -q matplotlib"
+        "import random, requests, urllib.parse\n",
+        "def get_registry_deps(name: str):\n",
+        "    url = f'https://registry.npmjs.org/{urllib.parse.quote(name, safe=\"\")}'\n",
+        "    r = requests.get(url, timeout=30)\n",
+        "    if r.status_code != 200:\n",
+        "        return {}\n",
+        "    data = r.json()\n",
+        "    latest = (data.get('dist-tags') or {}).get('latest')\n",
+        "    versions = data.get('versions') or {}\n",
+        "    obj = versions.get(latest) if latest in versions else {}\n",
+        "    return obj.get('dependencies') or {}\n",
+        "\n",
+        "sample = random.sample(top_packages, k=min(5, len(top_packages)))\n",
+        "mismatches = {}\n",
+        "for pkg in sample:\n",
+        "    deps_live = set(get_registry_deps(pkg).keys())\n",
+        "    deps_graph = set(v for u,v in G.out_edges(pkg))\n",
+        "    if deps_live != deps_graph:\n",
+        "        mismatches[pkg] = {\n",
+        "            'live_only': sorted(list(deps_live - deps_graph)),\n",
+        "            'graph_only': sorted(list(deps_graph - deps_live)),\n",
+        "        }\n",
+        "mismatches"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 8) Full Network Drawing (Top 200 + Dependencies)\n",
+        "Top 200 nodes in orange, others in blue; node size scales with in-degree."
       ]
     },
     {
@@ -205,42 +215,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# En yüksek in-degree sahibi düğüm\n",
-        "hub, _ = max(in_deg.items(), key=lambda kv: kv[1]) if in_deg else (None, None)\n",
-        "hub"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Hub etrafında küçük bir alt-ağ çizimi\n",
+        "import math\n",
         "try:\n",
         "    import matplotlib.pyplot as plt\n",
-        "    if hub is not None:\n",
-        "        neighbors = set(G.predecessors(hub)) | set(G.successors(hub)) | {hub}\n",
-        "        H = G.subgraph(neighbors).copy()\n",
-        "        pos = nx.spring_layout(H, seed=42)\n",
-        "        plt.figure(figsize=(8, 6))\n",
-        "        nx.draw_networkx_nodes(H, pos, node_size=200, alpha=0.8)\n",
-        "        nx.draw_networkx_edges(H, pos, alpha=0.3, arrows=True, arrowsize=10)\n",
-        "        nx.draw_networkx_labels(H, pos, font_size=8)\n",
-        "        plt.axis('off')\n",
-        "        plt.show()\n",
-        "    else:\n",
-        "        print('Görselleştirilecek hub bulunamadı.')\n",
+        "    N = G.number_of_nodes()\n",
+        "    pos = nx.spring_layout(G, k=1/math.sqrt(max(N,1)), seed=42)\n",
+        "    max_in = max(in_deg.values()) if in_deg else 1\n",
+        "    node_sizes = [100 + (400 * (in_deg.get(n,0) / max_in if max_in else 0)) for n in G.nodes()]\n",
+        "    node_colors = ['tab:orange' if n in top_set else 'tab:blue' for n in G.nodes()]\n",
+        "    plt.figure(figsize=(12, 9), dpi=150)\n",
+        "    nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)\n",
+        "    nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors='#444444')\n",
+        "    plt.title('NPM Top 200 Dependency Network (Full)')\n",
+        "    plt.axis('off')\n",
+        "    out_png = OUTDIR / 'network_full_top200.png'\n",
+        "    out_svg = OUTDIR / 'network_full_top200.svg'\n",
+        "    plt.tight_layout(); plt.savefig(out_png); plt.savefig(out_svg)\n",
+        "    (out_png, out_svg)\n",
         "except ModuleNotFoundError:\n",
-        "    print('matplotlib bulunamadı; görselleştirme atlandı.')"
+        "    print('matplotlib not found; skipping drawing.')\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 10) Top 200 Ağ Çizimi (Tüm Düğümler Dahil)",
-        "Tüm grafiği (Top 200 + bağımlılıkları) çizelim. Top 200 düğümlerini farklı renkte gösteriyoruz ve düğüm boyutlarını in-degree ile ölçekliyoruz."
+        "## 9) Top-200-Only Induced Subgraph\n",
+        "Just the Top 200 nodes; labels only if small enough for readability."
       ]
     },
     {
@@ -249,67 +250,38 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import math",
-        "import matplotlib.pyplot as plt",
-        "",
-        "# Yerleşim ve görselleştirme parametreleri",
-        "N = G.number_of_nodes()",
-        "pos = nx.spring_layout(G, k=1/math.sqrt(max(N,1)), seed=42)",
-        "",
-        "# Düğüm boyutları: in-degree tabanlı",
-        "max_in = max(in_deg.values()) if in_deg else 1",
-        "node_sizes = [ 100 + (400 * (in_deg.get(n,0) / max_in if max_in else 0)) for n in G.nodes() ]",
-        "",
-        "# Renk: Top 200 turuncu, diğerleri mavi",
-        "node_colors = [ \"tab:orange\" if n in top_set else \"tab:blue\" for n in G.nodes() ]",
-        "",
-        "plt.figure(figsize=(12, 9), dpi=150)",
-        "nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)",
-        "nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors=\"#444444\")",
-        "plt.title(\"NPM Top 200 Bağımlılık Ağı (Tümü)\")",
-        "plt.axis(\"off\")",
-        "out_png = OUTDIR / \"network_full_top200.png\"",
-        "out_svg = OUTDIR / \"network_full_top200.svg\"",
-        "plt.tight_layout()",
-        "plt.savefig(out_png)",
-        "plt.savefig(out_svg)",
-        "out_png, out_svg"
+        "try:\n",
+        "    H = G.subgraph(top_set).copy()\n",
+        "    HN = H.number_of_nodes() or 1\n",
+        "    posH = nx.spring_layout(H, k=1/math.sqrt(HN), seed=42)\n",
+        "    max_in_H = max((in_deg.get(n,0) for n in H.nodes()), default=1)\n",
+        "    node_sizes_H = [120 + (480 * (in_deg.get(n,0) / max_in_H if max_in_H else 0)) for n in H.nodes()]\n",
+        "    node_colors_H = ['tab:orange' for _ in H.nodes()]\n",
+        "    import matplotlib.pyplot as plt\n",
+        "    plt.figure(figsize=(10, 8), dpi=150)\n",
+        "    nx.draw_networkx_edges(H, posH, arrows=False, width=0.6, alpha=0.35)\n",
+        "    nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors='#444444')\n",
+        "    if H.number_of_nodes() <= 60:\n",
+        "        nx.draw_networkx_labels(H, posH, font_size=6)\n",
+        "    plt.title('NPM Top 200 Dependency Network (Top-Only)')\n",
+        "    plt.axis('off')\n",
+        "    out_png2 = OUTDIR / 'network_top200_only.png'\n",
+        "    out_svg2 = OUTDIR / 'network_top200_only.svg'\n",
+        "    plt.tight_layout(); plt.savefig(out_png2); plt.savefig(out_svg2)\n",
+        "    (out_png2, out_svg2)\n",
+        "except ModuleNotFoundError:\n",
+        "    print('matplotlib not found; skipping drawing.')\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 11) Top 200 Kohortu Ağ Çizimi (Sadece Top 200)",
-        "Top 200 düğümlerin oluşturduğu indüklenmiş alt-ağı çizelim."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "H = G.subgraph(top_set).copy()",
-        "HN = H.number_of_nodes() or 1",
-        "posH = nx.spring_layout(H, k=1/math.sqrt(HN), seed=42)",
-        "max_in_H = max((in_deg.get(n,0) for n in H.nodes()), default=1)",
-        "node_sizes_H = [ 120 + (480 * (in_deg.get(n,0) / max_in_H if max_in_H else 0)) for n in H.nodes() ]",
-        "node_colors_H = [ \"tab:orange\" for _ in H.nodes() ]",
-        "plt.figure(figsize=(10, 8), dpi=150)",
-        "nx.draw_networkx_edges(H, posH, arrows=False, width=0.6, alpha=0.35)",
-        "nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors=\"#444444\")",
-        "# İsteğe bağlı: az sayıda düğüm varsa etiketleri göster",
-        "if H.number_of_nodes() <= 60:",
-        "    nx.draw_networkx_labels(H, posH, font_size=6)",
-        "plt.title(\"NPM Top 200 Bağımlılık Ağı (Sadece Top 200)\")",
-        "plt.axis(\"off\")",
-        "out_png2 = OUTDIR / \"network_top200_only.png\"",
-        "out_svg2 = OUTDIR / \"network_top200_only.svg\"",
-        "plt.tight_layout()",
-        "plt.savefig(out_png2)",
-        "plt.savefig(out_svg2)",
-        "out_png2, out_svg2"
+        "## 10) Assumptions and Limitations\n",
+        "- Edge direction is Dependent -> Dependency; suitable for propagation analysis.\n",
+        "- Only `dependencies` are included; `peerDependencies` are excluded by default.\n",
+        "- Global dependent counts are not included; can be added from ecosyste.ms.\n",
+        "- Latest version is used; older versions may differ in dependencies."
       ]
     }
   ],
@@ -320,18 +292,10 @@
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "name": "python"
     }
   },
   "nbformat": 4,
   "nbformat_minor": 5
 }
+
