Turkcelestirme: CLI yardim ve ciktilar TR; analysis.ipynb aciklamalar ve yorumlar TR

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,26 +4,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# NPM Complex Network Analysis (Top 200)\n",
+        "# NPM Kompleks Ag Analizi (Top 200)\n",
         "\n",
-        "This notebook models the popular Top 200 NPM packages as a directed network (Dependent -> Dependency) and analyzes structural risk using in-degree and betweenness centrality. We skip installation cells and assume required packages are available in the environment.\n",
+        "Bu defter, populer Top 200 NPM paketini yonlu bir ag (Dependent -> Dependency) olarak modelleyip, in-degree ve betweenness merkeziyet metrikleriyle yapisal riski inceler. Kurulum adimlarini atliyoruz; gerekli paketlerin yüklü oldugu varsayilir.\n",
         "\n",
         "Contents:\n",
-        "- Data: `data/top_200.txt` (auto-used if present)\n",
-        "- Graph: NetworkX DiGraph, edges as Dependent -> Dependency\n",
-        "- Metrics: In-degree, Betweenness\n",
-        "- Outputs: saved under `results/`\n",
-        "- Visualization: full graph and Top-200-only induced subgraph\n",
+        "- Veri: `data/top_200.txt` (varsa otomatik kullanilir)\n",
+        "- Ag: NetworkX DiGraph, kenarlar Dependent -> Dependency\n",
+        "- Metrikler: In-degree, Betweenness\n",
+        "- Ciktilar: `results/` altina kaydedilir\n",
+        "- Gorsellestirme: tum ag ve sadece Top 200 indüklenmis alt-ag\n",
         "\n",
-        "Note: For large N (e.g., 20k), fetching dependencies and betweenness can be expensive; this notebook is tuned for the Top 200 cohort."
+        "Not: Buyuk N (ornegin 20k) icin bagimlilik cekimi ve betweenness hesabi maliyetlidir; bu defter Top 200 icin optimize edilmistir."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1) Imports and Parameters\n",
-        "We reuse helpers from `src/analyze_npm_network.py`. Default `OUTDIR` is `results/`."
+        "## 1) Icel Aktarim ve Parametreler\n",
+        "Yardimci fonksiyonlar `src/analyze_npm_network.py` icindedir. Varsayilan `OUTDIR` = `results/`."
       ]
     },
     {
@@ -36,7 +36,7 @@
         "import sys\n",
         "import os\n",
         "\n",
-        "# add src to import path\n",
+        "# src klasorunu import yoluna ekle\n",
         "sys.path.append(str(Path('src').resolve()))\n",
         "\n",
         "import networkx as nx\n",
@@ -50,7 +50,7 @@
         "    read_list,\n",
         ")\n",
         "\n",
-        "# Prefer fixed Top 200 list\n",
+        "# Tercihen sabit Top 200 listesi\n",
         "INPUT_LIST = Path('data/top_200.txt')\n",
         "USE_INPUT_LIST = INPUT_LIST.exists()\n",
         "TOP_N = 200  # fallback to fetching if needed\n",
@@ -63,8 +63,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2) Load Top 200 Packages\n",
-        "Use `data/top_200.txt` if available; otherwise fetch Top-N from APIs."
+        "## 2) Top 200 Paketleri Yukle\n",
+        "`data/top_200.txt` varsa kullan; yoksa API'lerden Top-N cek."
       ]
     },
     {
@@ -86,8 +86,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3) Build Directed Graph\n",
-        "Nodes are packages; edges are Dependent -> Dependency. Only `dependencies` are included by default."
+        "## 3) Yonlu Agi Kur\n",
+        "Dugumler paketler; kenarlar Dependent -> Dependency. Varsayilan olarak sadece `dependencies` kullanilir."
       ]
     },
     {
@@ -104,9 +104,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4) Centrality Metrics\n",
-        "- In-Degree: incoming edges to a node -> potential blast radius\n",
-        "- Betweenness: brokerage on shortest paths -> single-point-of-failure risk"
+        "## 4) Merkeziyet Metrikleri\n",
+        "- In-Degree: Dugume gelen kenar sayisi -> etkilenebilecek alan\n",
+        "- Betweenness: En kisa yollardaki aracilik -> tek hata noktasi riski"
       ]
     },
     {
@@ -124,8 +124,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5) Top 15 (All vs Cohort)\n",
-        "Quick look at leaders by in-degree and betweenness across all nodes and within the Top 200 cohort."
+        "## 5) Ilk 15 (Tum Dugumler ve Kohort)\n",
+        "In-degree ve betweenness acisindan liderlere hizli bakis (tum dugumler ve sadece Top 200)."
       ]
     },
     {
@@ -145,8 +145,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6) Save Artifacts\n",
-        "Edges, metrics, and a short report are written under `results/`."
+        "## 6) Sonuclari Kaydet\n",
+        "Kenarlar, metrikler ve kisa rapor `results/` altina yazilir."
       ]
     },
     {
@@ -166,8 +166,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7) Quick Validation\n",
-        "Compare registry dependencies with graph edges for a random few packages. Minor differences can arise due to version drift."
+        "## 7) Hizi Dogrulama\n",
+        "Rastgele bazi paketler icin registry'deki dependencies ile graf kenarlarini karsilastir. Surum farklarindan kaynakli kucuk farkliliklar olabilir."
       ]
     },
     {
@@ -205,8 +205,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8) Full Network Drawing (Top 200 + Dependencies)\n",
-        "Top 200 nodes in orange, others in blue; node size scales with in-degree."
+        "## 8) Tum Ag Cizimi (Top 200 + Bagimliliklar)\n",
+        "Top 200 dugumleri turuncu, digerleri mavi; dugum boyutu in-degree ile olceklenir."
       ]
     },
     {
@@ -240,8 +240,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9) Top-200-Only Induced Subgraph\n",
-        "Just the Top 200 nodes; labels only if small enough for readability."
+        "## 9) Sadece Top 200 Induklenmis Alt-Ag\n",
+        "Sadece Top 200 dugumleri; okunabilirlik icin az sayida dugum varsa etiketler gosterilir."
       ]
     },
     {
@@ -277,11 +277,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 10) Assumptions and Limitations\n",
-        "- Edge direction is Dependent -> Dependency; suitable for propagation analysis.\n",
-        "- Only `dependencies` are included; `peerDependencies` are excluded by default.\n",
-        "- Global dependent counts are not included; can be added from ecosyste.ms.\n",
-        "- Latest version is used; older versions may differ in dependencies."
+        "## 10) Varsayimlar ve Sinirlamalar\n",
+        "- Kenar yonu Dependent -> Dependency; yayilim analizi icin uygundur.\n",
+        "- Yalnizca `dependencies` dahil; `peerDependencies` varsayilan olarak disarida.\n",
+        "- Global dependent sayilari dahil degil; ecosyste.ms verisi eklenebilir.\n",
+        "- En guncel surum kullanilir; eski surumlerde bagimliliklar farkli olabilir."
       ]
     }
   ],
@@ -298,4 +298,3 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
-
